--- a/assets/index.css
+++ b/assets/index.css
@@ -64,6 +64,7 @@ img.logo {
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     cursor: pointer;
+    margin: 5px;
 }
 
 .filter-button:hover {
