--- a/assets/index.css
+++ b/assets/index.css
@@ -1,3 +1,11 @@
+:root {
+    --system-color: #6667ab;
+    --exchange-color: #434343;
+    --selected-color: darkviolet;
+    --hover-color: darkblue;
+    --filter-bg-color: #e9e9e9;
+}
+
 body {
     background-color: #ffffff;
     color: #434343;
@@ -76,6 +84,12 @@ img.logo {
     background-color: #4c4e87;
 }
 
+details.filter {
+    background-color: var(--filter-bg-color);
+    border-radius: 5px;
+    padding: 10px;
+}
+
 summary::marker {
     color: #6667ab;
     font-size: 1.2em;
@@ -115,3 +129,4 @@ details[open] > summary.property::before {
     word-wrap: break-word;
     word-break: break-word;
 }
+
