--- a/assets/index.css
+++ b/assets/index.css
@@ -1,12 +1,12 @@
 :root {
-    --system-color: #6667ab;
-    --exchange-color: #A7AB55;
-    --system-selected-color: #8F6FAB;
-    --exchange-selected-color: #8F6FAB;
-    --hover-color: #AB9778;
+    --system-color: #6667AB;
+    --exchange-color: #5E88AB;
+    --system-selected-color: #1E2159;
+    --exchange-selected-color: #105084;
+    --hover-color: #276b4f;
     --filter-bg-color: #e9e9e9;
-    --exchange-bg-color: #d3d4bc;
-    --system-bg-color: #cdcedd;
+    --exchange-bg-color: #E3EBF1;
+    --system-bg-color: #e9e9f3;
     --control-color: #5e88ab;
 
     --something-else-selected-opacity: 0.3;
@@ -133,7 +133,7 @@ summary.dataExchange {
 }
 
 summary.dataExchange::marker {
-    color: #A7AB55;
+    color: #434343;
     font-size: 1.2em;
 }
 
@@ -149,12 +149,12 @@ hr.filter{
 
 hr.system{
     margin: 0;
-    background-color: #6667ab
+    background-color: #434343
 }
 
 hr.dataExchange{
     margin: 0;
-    background-color: #A7AB55
+    background-color: #434343
 }
 
 summary.property {
@@ -281,4 +281,3 @@ input[type='checkbox'] {
 input[type='checkbox']:disabled {
     cursor: default;
 }
-
