--- a/assets/index.css
+++ b/assets/index.css
@@ -297,3 +297,7 @@ input[type='checkbox'] {
 input[type='checkbox']:disabled {
     cursor: default;
 }
+
+div.summaryContent {
+    margin-left: 27px;
+}
