main: Bugfix - FIZE-595

--- a/assets/index.css
+++ b/assets/index.css
@@ -235,7 +235,7 @@ path.hovered.marker {
 }
 
 g.hovered {
-    fill: var(--system-hover-color);
+    fill: var(--system-hover-color) !important;
     stroke-opacity: 1;
 }
 
