--- a/assets/index.css
+++ b/assets/index.css
@@ -36,6 +36,7 @@ h1 {
     flex: none;
     max-width: var(--sidebar-width);
     min-width: var(--sidebar-width);
+    flex: 1 1 var(--sidebar-width);
 }
 
 .subtitle {
@@ -252,6 +253,8 @@ g.hovered {
     position: relative;
     width: 100%;
     height: 100%;
+    min-width: 500px;
+    flex: 3 1 500px;
 }
 
 .controls {
@@ -330,4 +333,21 @@ input[type='checkbox']:disabled {
 
 div.summaryContent {
     margin-left: 27px;
+}
+
+.columns {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 1100px) { 
+    .columns {
+        flex-direction: column;
+    }
+
+    .sidebar,
+    .graph {
+        width: 100%;
+        min-width: auto;
+    }
 }
