--- a/assets/index.css
+++ b/assets/index.css
@@ -15,7 +15,10 @@
     --system-opacity-when-unimportant: 40%;
 
     --font-family: "Source Sans Pro";
+
     --sidebar-width: 300px;
+    --graph-min-width: 500px;
+    --dynamic-breakpoint: 1100px;  /* This should be min 2*sidebar-width + graph-min-width */
 }
 
 body {
@@ -251,10 +254,8 @@ g.hovered {
 
 .graph {
     position: relative;
-    width: 100%;
-    height: 100%;
-    min-width: 500px;
-    flex: 3 1 500px;
+    min-width: var(--graph-min-width);
+    flex: 3 1 var(--graph-min-width);
 }
 
 .controls {
@@ -340,7 +341,7 @@ div.summaryContent {
     flex-wrap: wrap;
 }
 
-@media (max-width: 1100px) { 
+@media (max-width: var(--dynamic-breakpoint)) {
     .columns {
         flex-direction: column;
     }
@@ -350,4 +351,20 @@ div.summaryContent {
         width: 100%;
         min-width: auto;
     }
+}
+
+div.block.filter {
+    position: relative;
+    height: 600px;
+}
+
+div.filters.mt-1{
+    overflow-y: auto;
+    height: calc(100% - 90px);
+}
+
+.buttons {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
 }
