FIZE-590: fix: un-hover exchanges

--- a/assets/index.css
+++ b/assets/index.css
@@ -220,7 +220,7 @@ details[open] > summary.property::before {
 }
 
 #systems.something-selected g.adjacent-to-selected {
-    fill: var(--system-selected-color);
+    fill: var(--system-color);
 }
 
 /*
