--- a/assets/index.css
+++ b/assets/index.css
@@ -106,7 +106,7 @@ img.logo {
     background-color: #6667ab;
     color: #ffffff;
     font-size: 16px;
-    font-family: Arial, sans-serif;
+    font-family: var(--font-family), sans-serif;
     padding: 10px 20px;
     border: none;
     border-radius: 8px;
