--- a/assets/index.css
+++ b/assets/index.css
@@ -4,8 +4,8 @@
     --exchange-color: #5E88AB;
     --system-selected-color: #1E2159;
     --exchange-selected-color: #105084;
-    --system-hover-color: #276b4f;
-    --exchange-hover-color: #276b4f;
+    --system-hover-color: #a0452f;
+    --exchange-hover-color: #a0452f;
     --filter-bg-color: #e9e9e9;
     --exchange-bg-color: #E3EBF1;
     --system-bg-color: #e9e9f3;
