Update index.css / FIZE-598

--- a/assets/index.css
+++ b/assets/index.css
@@ -1,5 +1,5 @@
 :root {
-    /* Anpassung erfolgt durch EZB */
+    /* change colors for systems and relations */
     --system-color: #6667AB;
     --exchange-color: #5E88AB;
     /* --system-selected-color: #1E2159;
